--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chance": "1.1.8",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "swr": "^1.3.0"
+    "swr": "1.3.0"
   },
   "devDependencies": {
+    "@types/chance": "^1.1.3",
     "@types/node": "17.0.33",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
