--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@components/*":["./components/*"]
+      "@components/*":["./components/*"],
+      "api/*":["./pages/api/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
