--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export":"next build && next export",
+    "export": "next build && next export",
     "lint": "next lint"
   },
   "dependencies": {
     "chance": "1.1.8",
     "next": "12.1.6",
+    "next-auth": "^4.3.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "swr": "1.3.0"
