--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.0.3",
     "chance": "1.1.8",
+    "mongodb": "^4.6.0",
     "next": "12.1.6",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
